force-app/main/default/objects/Case/fields/Confirm_Case_Reason_Category_Value__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Case_Reason_Category_Value__c</fullName>
    <description>Name From Category</description>
    <label>Confirm Case Reason Category Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>