force-app/main/default/objects/Case/fields/Confirm_Case_Reason_Classification__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Case_Reason_Classification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Confirm Case Reason Classification</label>
    <referenceTo>Case_Reason_Classification__c</referenceTo>
    <relationshipLabel>Cases (Confirm Case Reason Classification)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>