force-app/main/default/objects/Case/fields/Confirm_Sub_Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Sub_Case_Reason__c</fullName>
    <label>Confirm Sub Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>1st Sub Case Reason 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>