force-app/main/default/objects/Case/fields/Confirmation_Code__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Code__c</fullName>
    <description>CCPA. Code to generate after Privacy Request Case is created to send to Requesters</description>
    <label>Confirmation Code</label>
    <length>28</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>