force-app/main/default/objects/Case/fields/Confirmed_Reason_for_Leaving__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Reason_for_Leaving__c</fullName>
    <label>Confirmed Reason for Leaving</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No more employees to pay via payroll</fullName>
            </value>
            <value>
                <fullName>My company was acquired/is shutting down</fullName>
            </value>
            <value>
                <fullName>Missing payroll features</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Payroll processing time</fullName>
            </value>
            <value>
                <fullName>Lack of a specific integration</fullName>
            </value>
            <value>
                <fullName>Customer service</fullName>
            </value>
            <value>
                <fullName>Reporting capabilities</fullName>
            </value>
            <value>
                <fullName>Benefit management</fullName>
            </value>
            <value>
                <fullName>Moving To PEO (Insperity-Trinet-Justworks)</fullName>
            </value>
            <value>
                <fullName>Other reason</fullName>
            </value>
            <value>
                <fullName>Not Churn (FEIN change)</fullName>
            </value>
            <value>
                <fullName>Seasonal</fullName>
            </value>
            <value>
                <fullName>Gusto decision (hard suspended)</fullName>
            </value>
            <value>
                <fullName>Accountant/CPA influenced</fullName>
            </value>
            <value>
                <fullName>Moving to different provider</fullName>
            </value>
            <value>
                <fullName>Leaving temporarily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>