force-app/main/default/objects/Case/fields/Contact_Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Employee_Id__c</fullName>
    <formula>Contact.Employee_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Employee Id</label>
    <type>Text</type>
</CustomField>