force-app/main/default/objects/Case/fields/Continuation_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Continuation_Effective_Date__c</fullName>
    <description>Field used by our Cobra team to record Continuation Effective Date on Cobra cases. (BT-7473)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Continuation Effective Date</label>
    <type>Date</type>
</CustomField>