force-app/main/default/objects/Case/fields/Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Coordinator__c</fullName>
    <description>Contains the Id of the last Coordinator assigned to the case.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Coordinator</label>
    <length>20</length>
    <type>Text</type>
</CustomField>