force-app/main/default/objects/Case/fields/Covid_19_Note_s__c.field-meta.xml
<CustomField>
    <fullName>Covid_19_Note_s__c</fullName>
    <description>Text field created during the Covid19 pandemic to track details on activity for Fulfillment and Sales Teams.   See Jira BT-7185 for details.</description>
    <inlineHelpText>This field is to record any notes from customers that are reaching out to Gusto about Covid-19.</inlineHelpText>
    <label>Covid-19 Note[s]</label>
    <length>255</length>
    <type>Text</type>
</CustomField>