force-app/main/default/objects/Case/fields/Created_At_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_At_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Created At Date</label>
    <type>Date</type>
</CustomField>