force-app/main/default/objects/Case/fields/Current_LSI__c.field-meta.xml
<CustomField>
    <fullName>Current_LSI__c</fullName>
    <label>Current LSI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NY DOR Multi Payment</fullName>
            </value>
            <value>
                <fullName>IL DOR late payment #2</fullName>
            </value>
            <value>
                <fullName>Q4 Tumbleweed 11/29 schedule change</fullName>
            </value>
            <value>
                <fullName>IRS Withholding Unknown Nacha Entry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>