force-app/main/default/objects/Case/fields/Customer_Actions_Required__c.field-meta.xml
<CustomField>
    <fullName>Customer_Actions_Required__c</fullName>
    <description>For Tax Res Functionality</description>
    <label>Customer Actions Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pay P&amp;I</fullName>
            </value>
            <value>
                <fullName>Pay balance due</fullName>
            </value>
            <value>
                <fullName>Send letter to agency</fullName>
            </value>
            <value>
                <fullName>Update tax setup in gusto</fullName>
            </value>
            <value>
                <fullName>Next steps needed aren&apos;t listed</fullName>
            </value>
            <value>
                <fullName>No customer actions required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>