force-app/main/default/objects/Case/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>CCPA. For Employee user type. The date of birth of the requester.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>