force-app/main/default/objects/Case/fields/Date_of_Hire__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Hire__c</fullName>
    <description>CCPA. For Employee user type. The date this requester was hired.</description>
    <label>Date of Hire</label>
    <type>Date</type>
</CustomField>