force-app/main/default/objects/Case/fields/Date_Time_End__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_End__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Time End</label>
    <type>DateTime</type>
</CustomField>