force-app/main/default/objects/Case/fields/Date_Time_Solved__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Solved__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Time Solved</label>
    <type>DateTime</type>
</CustomField>