force-app/main/default/objects/Case/fields/Date_Time_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Submitted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Time Submitted</label>
    <type>DateTime</type>
</CustomField>