force-app/main/default/objects/Case/fields/DCA_UUID__c.field-meta.xml
<CustomField>
    <fullName>DCA_UUID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DCA UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>