force-app/main/default/objects/Case/fields/DeEscalation_Steps_Taken__c.field-meta.xml
<CustomField>
    <fullName>DeEscalation_Steps_Taken__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>De-Escalation Steps Taken</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>