force-app/main/default/objects/Case/fields/Dental_UUID__c.field-meta.xml
<CustomField>
    <fullName>Dental_UUID__c</fullName>
    <label>Dental UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>