force-app/main/default/objects/Case/fields/DIVR_Category_Value__c.field-meta.xml
<CustomField>
    <fullName>DIVR_Category_Value__c</fullName>
    <description>Digital IVR Category name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DIVR Category Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>