force-app/main/default/objects/Case/fields/DIVR_Id__c.field-meta.xml
<CustomField>
    <fullName>DIVR_Id__c</fullName>
    <description>The DIVR Id from GF Tickets, Phones, Chats</description>
    <label>DIVR Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>