force-app/main/default/objects/Case/fields/Do_not_Auto_Solve__c.field-meta.xml
<CustomField>
    <fullName>Do_not_Auto_Solve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don’t Auto Solve</label>
    <type>Checkbox</type>
</CustomField>