force-app/main/default/objects/Case/fields/Drift_Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>Drift_Conversation_Id__c</fullName>
    <label>Intercom Conversation Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>