force-app/main/default/objects/Case/fields/Drift_Conversation_URL__c.field-meta.xml
<CustomField>
    <fullName>Drift_Conversation_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Intercom Conversation URL</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>