force-app/main/default/objects/Case/fields/Duration_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_Minutes__c</fullName>
    <label>Duration in Minute(s)</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>