force-app/main/default/objects/Case/fields/Employee_Ids__c.field-meta.xml
<CustomField>
    <fullName>Employee_Ids__c</fullName>
    <label>Employee Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>