force-app/main/default/objects/Case/fields/Engagement_Alert__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Alert__c</fullName>
    <description>This will be used to identify skillset related to Engagement Alerts</description>
    <label>Engagement Alert</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Engagement_Alert</valueSetName>
    </valueSet>
</CustomField>