force-app/main/default/objects/Case/fields/Enrollment_Key__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Enrollment Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>