force-app/main/default/objects/Case/fields/Enrollment_Message__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enrollment Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>