force-app/main/default/objects/Case/fields/Enrollment_Modified__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Modified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marked as true if a selection_cancelled event is received for any selection uuid under the case</description>
    <label>Enrollment Modified</label>
    <type>Checkbox</type>
</CustomField>