force-app/main/default/objects/Case/fields/Error_Origin__c.field-meta.xml
<CustomField>
    <fullName>Error_Origin__c</fullName>
    <label>Error Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice Issue</fullName>
            </value>
            <value>
                <fullName>Care</fullName>
            </value>
            <value>
                <fullName>PayOps</fullName>
            </value>
            <value>
                <fullName>NCO</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>No Error</fullName>
            </value>
            <value>
                <fullName>ER Error</fullName>
            </value>
            <value>
                <fullName>EE Error</fullName>
            </value>
            <value>
                <fullName>Engagement Error</fullName>
            </value>
            <value>
                <fullName>Renewals</fullName>
            </value>
            <value>
                <fullName>New Plans</fullName>
            </value>
            <value>
                <fullName>BOR</fullName>
            </value>
            <value>
                <fullName>New Plan Sales</fullName>
            </value>
            <value>
                <fullName>BOR Sales</fullName>
            </value>
            <value>
                <fullName>MOps</fullName>
            </value>
            <value>
                <fullName>Advising</fullName>
            </value>
            <value>
                <fullName>Carrier</fullName>
            </value>
            <value>
                <fullName>Issue with Product</fullName>
            </value>
            <value>
                <fullName>Benefits Services</fullName>
            </value>
            <value>
                <fullName>BYB</fullName>
            </value>
            <value>
                <fullName>Automation Error</fullName>
            </value>
            <value>
                <fullName>Benefit Service</fullName>
                <isActive>false</isActive>
                <label>Benefit Service</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>