force-app/main/default/objects/Case/fields/Error_Origin_Date__c.field-meta.xml
<CustomField>
    <fullName>Error_Origin_Date__c</fullName>
    <description>Error Origin Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Origin Date</label>
    <type>Date</type>
</CustomField>