force-app/main/default/objects/Case/fields/Escalated_rom__c.field-meta.xml
<CustomField>
    <fullName>Escalated_rom__c</fullName>
    <description>This field is going to be filed out by Engagement advocates that handle escalated cases from our Vendors to report on Vendor escalation trends.</description>
    <label>Escalated from</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TaskUs Texas</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>FSC Care</fullName>
            </value>
            <value>
                <fullName>DSP</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Non-Engagement</fullName>
            </value>
            <value>
                <fullName>Core &amp; Complete Internal</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>LiveOps</fullName>
                <isActive>false</isActive>
                <label>LiveOps</label>
            </value>
            <value>
                <fullName>PRC Internal</fullName>
                <isActive>false</isActive>
                <label>PRC Internal</label>
            </value>
            <value>
                <fullName>TaskUs Manila</fullName>
                <isActive>false</isActive>
                <label>TaskUs Manila</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>