force-app/main/default/objects/Case/fields/Escalation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Reason__c</fullName>
    <label>Escalation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect Case Reason</fullName>
            </value>
            <value>
                <fullName>Dont have relevant access</fullName>
            </value>
            <value>
                <fullName>Data Breach</fullName>
            </value>
            <value>
                <fullName>Executive/Social</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Regulatory</fullName>
            </value>
            <value>
                <fullName>Support Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>