force-app/main/default/objects/Case/fields/Escalation_Type__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Type__c</fullName>
    <label>Escalation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bug Report</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Benefits Reversal</fullName>
            </value>
            <value>
                <fullName>Manager Escalation</fullName>
            </value>
            <value>
                <fullName>Escalation To Other Team</fullName>
            </value>
            <value>
                <fullName>Social Media Alert</fullName>
            </value>
            <value>
                <fullName>Payroll Care</fullName>
            </value>
            <value>
                <fullName>Dedicated Support</fullName>
            </value>
            <value>
                <fullName>Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>