force-app/main/default/objects/Case/fields/Event_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Check_Date__c</fullName>
    <label>Event Check Date</label>
    <type>Date</type>
</CustomField>