force-app/main/default/objects/Case/fields/Event_timestamp__c.field-meta.xml
<CustomField>
    <fullName>Event_timestamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event timestamp</label>
    <type>DateTime</type>
</CustomField>