force-app/main/default/objects/Case/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>ContractorPayment</fullName>
                <label>Contractor Payment</label>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>AgentPayment</fullName>
                <label>Agent Payment</label>
            </value>
            <value>
                <fullName>HistoricalCompany</fullName>
                <label>Historical Company</label>
            </value>
            <value>
                <fullName>PenaltyCase</fullName>
                <label>Penalty Case</label>
            </value>
            <value>
                <fullName>Payroll Care Email</fullName>
            </value>
            <value>
                <fullName>InternationalContractorPayments::Db::InternationalContractorPayment</fullName>
            </value>
            <value>
                <fullName>InternationalEmployeePayroll</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>