force-app/main/default/objects/Case/fields/Feature_Service_Desired__c.field-meta.xml
<CustomField>
    <fullName>Feature_Service_Desired__c</fullName>
    <label>Feature/Service Desired</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Time Tracking</fullName>
            </value>
            <value>
                <fullName>Health Benefits support (&lt; 4 EEs)</fullName>
            </value>
            <value>
                <fullName>Health Benefits support (Lower Cost)</fullName>
            </value>
            <value>
                <fullName>Faster Payroll Processing time</fullName>
            </value>
            <value>
                <fullName>Contractor &quot;2 Day&quot; Processing</fullName>
            </value>
            <value>
                <fullName>Contractor Only Support</fullName>
            </value>
            <value>
                <fullName>Improved Reporting</fullName>
            </value>
            <value>
                <fullName>Temporary &quot;Pause&quot; Option</fullName>
            </value>
            <value>
                <fullName>Tax/HR Guidance</fullName>
            </value>
            <value>
                <fullName>Lower Price</fullName>
            </value>
            <value>
                <fullName>&quot;Too Big for Gusto&quot; (Outgrown our service)</fullName>
            </value>
            <value>
                <fullName>Integration Improvement</fullName>
            </value>
            <value>
                <fullName>Only processes 1 payroll/year</fullName>
            </value>
            <value>
                <fullName>Alternative Payment Methods (ie. Credit Card)</fullName>
            </value>
            <value>
                <fullName>Payroll Feature Improvement</fullName>
            </value>
            <value>
                <fullName>All-in-one solution (payroll/benefits/HR/time)</fullName>
            </value>
            <value>
                <fullName>24/7 and/or weekend support</fullName>
            </value>
            <value>
                <fullName>Dedicated support/account manager</fullName>
            </value>
            <value>
                <fullName>Less manual or time consuming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>