force-app/main/default/objects/Case/fields/FEIN_Last_4_digits__c.field-meta.xml
<CustomField>
    <fullName>FEIN_Last_4_digits__c</fullName>
    <description>CCPA. For Signatory and Contractor (business) user types. The last 4 digits of FEIN.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>FEIN Last 4 digits</label>
    <length>4</length>
    <type>Text</type>
</CustomField>