force-app/main/default/objects/Case/fields/First_Level__c.field-meta.xml
<CustomField>
    <fullName>First_Level__c</fullName>
    <description>Digital IVR first level</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>