force-app/main/default/objects/Case/fields/Follow_Up_Method__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Method__c</fullName>
    <label>Follow Up Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>