force-app/main/default/objects/Case/fields/Follow_Up_Score__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Score__c</fullName>
    <description>Sets a number value dependent on the value of the Follow_Up_Method__c field</description>
    <formula>IF(
ISPICKVAL( Follow_Up_Method__c, &apos;Phone&apos;),
16.5,
IF(
ISPICKVAL( Follow_Up_Method__c , &apos;Email&apos;),
7.25,
IF(
ISPICKVAL( Follow_Up_Method__c , &apos;Portal&apos;),
9.25,
IF(ISPICKVAL( Follow_Up_Method__c , &quot;&quot;),
11,1)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Follow Up Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>