force-app/main/default/objects/Case/fields/Forethought_Solve_Triggered__c.field-meta.xml
<CustomField>
    <fullName>Forethought_Solve_Triggered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a backend field used to evaluate if &apos;Forethought Solve&apos; was invoked on this case</description>
    <label>Forethought_Solve_Triggered</label>
    <type>Checkbox</type>
</CustomField>