force-app/main/default/objects/Case/fields/Form_Fully_Mapped__c.field-meta.xml
<CustomField>
    <fullName>Form_Fully_Mapped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form Fully Mapped</label>
    <type>Checkbox</type>
</CustomField>