force-app/main/default/objects/Case/fields/FSA_UUID__c.field-meta.xml
<CustomField>
    <fullName>FSA_UUID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FSA UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>