force-app/main/default/objects/Case/fields/Fulfillment_Event_Encrypted_JSON__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Event_Encrypted_JSON__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fulfillment Event Encrypted JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>