force-app/main/default/objects/Case/fields/Genesys_Call_Id__c.field-meta.xml
<CustomField>
    <fullName>Genesys_Call_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Genesys Call Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>