force-app/main/default/objects/Case/fields/Global_Issue__c.field-meta.xml
<CustomField>
    <fullName>Global_Issue__c</fullName>
    <description>Payroll Compliance tracks impact to customers</description>
    <label>Global Issue?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Customer</fullName>
            </value>
            <value>
                <fullName>Some Customers</fullName>
            </value>
            <value>
                <fullName>All Customers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>