force-app/main/default/objects/Case/fields/Google_Calendar_Event__c.field-meta.xml
<CustomField>
    <fullName>Google_Calendar_Event__c</fullName>
    <label>Google Calendar Event</label>
    <type>Url</type>
</CustomField>