force-app/main/default/objects/Case/fields/Google_Drive_URL__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Google Drive URL</label>
    <type>Url</type>
</CustomField>