force-app/main/default/objects/Case/fields/Group_Member_Update_Type__c.field-meta.xml
<CustomField>
    <fullName>Group_Member_Update_Type__c</fullName>
    <label>Group/Member Update Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home Address Update</fullName>
            </value>
            <value>
                <fullName>Filing Address Update</fullName>
            </value>
            <value>
                <fullName>Mailing Address Update</fullName>
            </value>
            <value>
                <fullName>Bank Account Update</fullName>
            </value>
            <value>
                <fullName>SSN Update</fullName>
            </value>
            <value>
                <fullName>First Name Update</fullName>
            </value>
            <value>
                <fullName>Last Name Update</fullName>
            </value>
            <value>
                <fullName>Birthday Update</fullName>
            </value>
            <value>
                <fullName>Hire Date Update</fullName>
            </value>
            <value>
                <fullName>Dependent Gains Other Coverage</fullName>
            </value>
            <value>
                <fullName>Two Percent Shareholder Update</fullName>
            </value>
            <value>
                <fullName>FLSA Status Update</fullName>
            </value>
            <value>
                <fullName>Salary Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>