force-app/main/default/objects/Case/fields/Group_Member_Update_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>Group_Member_Update_Type_Text__c</fullName>
    <description>Used in Email Template for form automation. Comma separated values on what type of updates are made. Relevant to Member/Group Updates</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Group/Member Update Type Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>