force-app/main/default/objects/Case/fields/Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>